--- a/index.html
+++ b/index.html
@@ -114,18 +114,18 @@
                                 <p>
                                     I'm Caleb Charpentier, a Ph.D. student in <a href="https://www.uyedalab.com/" target="_blank" style="text-decoration:none;color:#007ced;">Uyeda Lab</a> at Virginia Tech. I'm interested in the evolution of morphology,
                                     and how we can incorporate Knowledge-Guided Machine Learning (KGML) and automated discovery techniques 
-                                    to rethink the ways that we study complex traits across time scales.
+                                    to rethink the ways that we study evolutionary traits from high-dimensional datasets.
                                 </p>
                                 <p>										
-                                    I'm currently in my second year of my program, and am mostly focused on developing a pipeline to simulate raw data, 
+                                    I'm currently starting my third year in my lab, and am mostly focused on developing a pipeline to simulate raw data, 
                                     such as images of imaginary taxa, that can be used to assess the performance of neural networks that are intended 
                                     to discover traits. The pipeline is called TraitBlender, and can be found <a href='https://github.com/Imageomics/TraitBlender' target='_blank' style='text-decoration:none;color:#007ced;'>here</a>.
                                 </p>
                                 <p>
-                                    In the past, the way we constructed characters was often limited by expert knowledge / interest, which 
-                                    made some research difficult to reproduce and limited us to measuring 
-                                    things that a human is likely to notice. Deep learning can help us cross these barriers, by making 
-                                    character construction more objective and allowing us to measure exceedingly complex and high-dimensional features.
+                                    The way we traditionally construct characters is often limited by expert knowledge / interest, which 
+                                    can sometimes results in inexhaustive, redundant, or difficult-to-reproduce character delimitations. Deep learning can 
+                                    help us cross these barriers, by making character construction more objective and allowing us to measure exceedingly complex 
+                                    and high-dimensional features that a human might have difficulty keeping track of.
                                 </p>
                             </div>
                             <!-- Portfolio Grid -->
