--- a/talks.html
+++ b/talks.html
@@ -60,7 +60,7 @@
                            <a href="https://github.com/calcharp/GoodReads" target="_blank">GoodReads</a>
                         </li>
                         <li class="menu-item current-menu-item">
-                            <a href="talks.html" target="_blank">Talks</a>
+                            <a href="talks.html">Talks</a>
                          </li>
                      </ul>
                   </div>
