--- a/CV.html
+++ b/CV.html
@@ -60,6 +60,9 @@
                         <li class="menu-item">
                            <a href="https://github.com/calcharp/GoodReads" target="_blank">GoodReads</a>
                         </li>
+                        <li class="menu-item">
+                           <a href="talks.html" target="_blank">Talks</a>
+                        </li>
                      </ul>
                   </div>
                   <!-- Mobile Menu Toggle -->
