--- a/Goodreads.html
+++ b/Goodreads.html
@@ -54,24 +54,24 @@
                 <li class="menu-item">
                   <a href="index.html">About Me</a>
                 </li>
-
                 <li class="menu-item">
                   <a href="Research.html">Research</a>
                 </li>
-
                 <li class="menu-item">
                   <a href="Publications.html">Publications</a>
-                
+                </li>
                 <li class="menu-item">
                   <a href="Software.html">Software</a>
-
+                </li>
                 <li class="menu-item">
                   <a href="CV.html">CV</a>
                 </li>
-
                 <li class="menu-item current-menu-item">
                   <a href="https://github.com/calcharp/GoodReads" target="_blank">GoodReads</a>
                 </li>
+                <li class="menu-item\">
+                  <a href="talks.html">Talks</a>
+               </li>
               </ul>
             </div>
 
