--- a/Software.html
+++ b/Software.html
@@ -59,6 +59,9 @@
                         <li class="menu-item">
                            <a href="https://github.com/calcharp/GoodReads" target="_blank">GoodReads</a>
                         </li>
+                        <li class="menu-item">
+                           <a href="talks.html">Talks</a>
+                        </li>
                      </ul>
                   </div>
                   <!-- Mobile Menu Toggle -->
