--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                             <li class="menu-item">
                                 <a href="https://github.com/calcharp/GoodReads" target="_blank">GoodReads</a>
                             </li>
+                            <li class="menu-item">
+                                <a href="talks.html">Talks</a>
+                             </li>
                         </ul>
                     </div>
                     <!-- Mobile Menu Toggle -->
