fix home button on CV page

--- a/CV.html
+++ b/CV.html
@@ -36,8 +36,7 @@
                   <!-- Text Logo -->
                   <div class="text-logo">
                      <a href="index.html">
-                        <div class="logo-symbol">A</div>
-                        <div class="logo-text">Home</div>
+                        <div class="logo-symbol">Home</div>
                      </a>
                   </div>
                   <!-- /Text Logo -->
