--- a/talks.html
+++ b/talks.html
@@ -5,9 +5,9 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <title>Caleb Charpentier</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-      <meta name="description" content="Leven - Resume / CV / vCard Template" />
+      <meta name="description" content="Caleb Charpentier's Recorded Presentations" />
       <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, portfolio" />
-      <meta name="author" content="lmpixels" />
+      <meta name="author" content="Caleb Charpentier" />
       <link rel="shortcut icon" href="img/darwinbust.png">
       <link rel="stylesheet" href="css/normalize.css" type="text/css">
       <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
