--- a/Research.html
+++ b/Research.html
@@ -99,6 +99,9 @@
                                        that encourage inductive inference, we can potentially bypass the interpretability problems associated with black-box
                                        models and make character construction more reproducible and more robust to complex evolutionary dynamics. 
                                     </p>
+                                    <p>
+                                       <a href="https://cacm.acm.org/news/seeing-beyond-human-sight/" style="color:#007ced;" target="_blank">News article on the goals and impact of Imageomics</a>
+                                    </p>  
                                  </div>
                               </div>
                            </div>
