update text in index

--- a/index.html
+++ b/index.html
@@ -115,20 +115,27 @@
                             <!-- Fun Facts -->
                             <div class="row" style="margin-bottom: 20px;">
                                 <p>
-                                    I'm Caleb Charpentier, a Ph.D. student in <a href="https://www.uyedalab.com/" target="_blank" style="text-decoration:none;color:#007ced;">Uyeda Lab</a> at Virginia Tech. I'm interested in the evolution of morphology,
-                                    and how we can incorporate Knowledge-Guided Machine Learning (KGML) and automated discovery techniques 
-                                    to rethink the ways that we study evolutionary traits from high-dimensional datasets.
+                                    I'm Caleb Charpentier, a Ph.D. student in 
+                                    <a href="https://www.uyedalab.com/" target="_blank" style="text-decoration:none;color:#007ced;">Uyeda Lab</a> 
+                                    at Virginia Tech. I'm interested in the evolution of morphology, and 
+                                    how we can incorporate Knowledge-Guided Machine Learning (KGML) and 
+                                    Imageomics techniques to rethink the ways we study phenomes from raw and high-dimensional datasets.
                                 </p>
                                 <p>										
-                                    I'm currently starting my third year in my lab, and am mostly focused on developing a pipeline to simulate raw data, 
-                                    such as images of imaginary taxa, that can be used to assess the performance of neural networks that are intended 
-                                    to discover traits. The pipeline is called TraitBlender, and can be found <a href='https://github.com/Imageomics/TraitBlender' target='_blank' style='text-decoration:none;color:#007ced;'>here</a>.
+                                    My research is mostly two-fold: I'm interested in developing deep-learning 
+                                    models that learn structured latent spaces for phenotypic data, and in 
+                                    developing theory and techniques that can better ground these models in the
+                                    traditional scientific process.  
                                 </p>
                                 <p>
-                                    The way we traditionally construct characters is often limited by expert knowledge / interest, which 
-                                    can sometimes results in inexhaustive, redundant, or difficult-to-reproduce character delimitations. Deep learning can 
-                                    help us cross these barriers, by making character construction more objective and allowing us to measure exceedingly complex 
-                                    and high-dimensional features that a human might have difficulty keeping track of.
+                                    Traditional character construction methods are often inexhaustive, 
+                                    redundant, or difficult-to-reproduce. Deep learning techniques can 
+                                    address these limitations, but many of them are "black-boxes", whose
+                                     decisions are difficult to interpret, greatly limiting their use in 
+                                     evolutionary biology research. My hope is to resolve these issues, 
+                                     and pave the way for researchers to not simply use machine learning
+                                      to measure large numbers of traits, but also to change the way we 
+                                      understand traits on an empirical, fundamental level.
                                 </p>
                             </div>
                             <!-- Portfolio Grid -->
