fix all the bad text wrapping

--- a/Research.html
+++ b/Research.html
@@ -82,7 +82,7 @@
                               <h3 style="margin-bottom:20px !important;">Imageomics</h3>
                               <div class="content-wrapper">
                                  <img style="float:right;margin-bottom:20px;margin-left:20px;" class="responsive-image" src="img/imageomics.jpg" alt="Imageomics Institute Logo" />
-                                 <div class="text-content">
+                                 <div style="word-break: keep-all; hyphens: none;" class="text-content">
                                     <p>My work is centered around <a href='https://imageomics.osu.edu/' target='_blank' style='text-decoration:none;color:#007ced;'>Imageomics</a>, 
                                        an area of research that uses images and machine-learning algorithms to study 
                                        biology. More specifically, I am focused on integrating pre-existing biological knowledge and interpretable 
@@ -110,7 +110,7 @@
                               <h3 style="margin-bottom:20px !important;">Automated Character Construction with Deep Learning</h3>
                               <div class="content-wrapper">
                                  <img style="height:auto;width:50%;float:left;margin-bottom:20px;margin-right:20px;" src="img/phylonn.png" alt="" />
-                                 <div>
+                                 <div style="word-break: keep-all; hyphens: none;">
                                     <p></p>
                                     <p> While deep learning models can fit functions to any sort of data, they still always include inductive 
                                        assumptions about how that data behaves / the processes that led to it being what it is. When dealing 
@@ -135,7 +135,7 @@
                               <h3 style="margin-bottom:20px !important;">Simulating Raw Data</h3>
                               <div class="content-wrapper">
                                  <img style="height:auto;width:40%;float:left;margin-bottom:20px;margin-right:20px;" src="img/t1_Top_0.png" alt="" />
-                                 <div>
+                                 <div style="word-break: keep-all; hyphens: none;">
                                     <p> Most phenotypic traits are complex characters, whose evolutionary paths are determined by 
                                        dynamic changes in regulatory networks with various degrees of integration, complexity, and canalization.
                                        Deep learning may allow us to uncover these sophisticated processes so that they can be better represented
@@ -157,7 +157,7 @@
                               <h3 style="margin-bottom:20px !important;">Incorporating Structured Knowledge into Inference</h3>
                               <div class="content-wrapper">
                                  <img style="height:auto;width:50%;float:left;margin-bottom:20px;margin-right:20px;" src="img/phenoscape.png" alt="" />
-                                 <div>
+                                 <div style="word-break: keep-all; hyphens: none;">
                                     <p>Whenever we make models, we are attempting to codify statements about the world. 
                                        For a model to be meaningful, however, the assumptions we put into it must be reflective 
                                        of our assumptions about external reality. When we are dealing with traits that have 
