--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             </div>
                             <!-- Home Page Top Part -->
                             <!-- Fun Facts -->
-                            <div class="row" style="margin-bottom: 20px;">
+                            <div class="row" style="margin-bottom: 40px; margin-left: 20px; margin-right: 20px; word-break: keep-all; hyphens: none;">
                                 <p>
                                     I'm Caleb Charpentier, a Ph.D. student in 
                                     <a href="https://www.uyedalab.com/" target="_blank" style="text-decoration:none;color:#007ced;">Uyeda Lab</a> 
@@ -131,13 +131,14 @@
                                     Traditional character construction methods are often inexhaustive, 
                                     redundant, or difficult-to-reproduce. Deep learning techniques can 
                                     address these limitations, but many of them are "black-boxes", whose
-                                     decisions are difficult to interpret, greatly limiting their use in 
-                                     evolutionary biology research. My hope is to resolve these issues, 
-                                     and pave the way for researchers to not simply use machine learning
-                                      to measure large numbers of traits, but also to change the way we 
-                                      understand traits on an empirical, fundamental level.
+                                    decisions are difficult to interpret, greatly limiting their use in 
+                                    evolutionary biology research. My hope is to resolve these issues, 
+                                    and pave the way for researchers to not simply use machine learning
+                                    to measure large numbers of traits, but also to change the way we 
+                                    understand traits on an empirical, fundamental level.
                                 </p>
                             </div>
+                            
                             <!-- Portfolio Grid -->
                             <div class="portfolio-grid two-columns shuffle">
                                 <!-- Portfolio Item 2 -->
