change titles for different tabs

--- a/talks.html
+++ b/talks.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Caleb Charpentier</title>
+      <title>Caleb Charpentier - Talks</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
       <meta name="description" content="Caleb Charpentier's Recorded Presentations" />
       <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, portfolio" />
