--- a/Research.html
+++ b/Research.html
@@ -134,7 +134,7 @@
                            <div style="margin-bottom:50px !important;">
                               <h3 style="margin-bottom:20px !important;">Simulating Raw Data</h3>
                               <div class="content-wrapper">
-                                 <img style="height:auto;width:40%;float:left;margin-bottom:20px;margin-right:20px;" src="img/t1_Top_0.png" alt="" />
+                                 <img style="height:auto;width:40%;float:left;margin-bottom:20px;margin-right:20px;" src="img/traitblender_shell.png" alt="" />
                                  <div style="word-break: keep-all; hyphens: none;">
                                     <p> Most phenotypic traits are complex characters, whose evolutionary paths are determined by 
                                        dynamic changes in regulatory networks with various degrees of integration, complexity, and canalization.
