--- a/Research.html
+++ b/Research.html
@@ -132,7 +132,7 @@
                            </div>
                            <!-- Section 3 -->
                            <div style="margin-bottom:50px !important;">
-                              <h3 style="margin-bottom:20px !important;">Simulating Raw Data</h3>
+                              <h3 style="margin-bottom:20px !important;">Simulating Image Data</h3>
                               <div class="content-wrapper">
                                  <img style="height:auto;width:40%;float:left;margin-bottom:20px;margin-right:20px;" src="img/traitblender_shell.png" alt="" />
                                  <div style="word-break: keep-all; hyphens: none;">
