update TraitBlender link to online hosted documentation

--- a/Software.html
+++ b/Software.html
@@ -83,7 +83,7 @@
                               <figure class="item lbimage" data-groups='["category_all", "category_image"]'>
                                  <div class="portfolio-item-img">
                                     <img src="./img/traitblender_logo_bg.png" alt="Image 2" title="" />
-                                    <a title="TraitBlender" target="_blank" href="https://github.com/Imageomics/TraitBlender"></a>
+                                    <a title="TraitBlender" target="_blank" href="https://calebcharpentier.com/TraitBlender/"></a>
                                  </div>
                                  <i class="fa fa-image"></i>
                                  <h4 class="name">TraitBlender</h4>
